# EffekseerForMultiLanguages

./: .gitmodules  CMakeLists.txt  README.md
.github/actions/tools/: devenv.sh
.github/workflows/: build.yml
src/cpp/Core/: EffekseerManagerCore.cpp  EffekseerManagerCore.h
